# ELISE

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml  main.yml
fonts/: icon_font.h
icons/: logo128.h  logo32.h
libs/: kiss_fft.hh  portable_file_dialog.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/: SourceCodePro_Semibold.h  logo128.h  logo32.h
src/: AudioManager.cpp  AudioManager.h  AudioUtils.cpp  AudioUtils.h  EliseApp.cpp  EliseApp.h  Encoder.cpp  Encoder.h  Exporter.cpp  Exporter.h  ImGui_themes.h  InterpolationUtils.h  JsonHandler.cpp  JsonHandler.h  LightManager.cpp  LightManager.h  VideoEncoder.cpp  VideoEncoder.h  Viewport.cpp  Viewport.h  WaveformViewer.cpp  WaveformViewer.h  file_utils.h  main.cpp  shaders.h
src/2D renderer/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  default_shaders.h
src/2D renderer/PostProcessing/Effects/: Effect.cpp  Effect.h  pp_default_shaders.h
src/2D renderer/PostProcessing/Effects/Bloom/: Bloom.cpp  Bloom.h  bloom_shaders.h
src/2D renderer/PostProcessing/Effects/Copy/: Copy.cpp  Copy.h  copy_shader.h
src/2D renderer/Shader/: Graphics.cpp  Graphics.h  Shader.cpp  Shader.h
